added anaglyph demo and cleaned other demos.

--- a/demos/accelerometer/index.html
+++ b/demos/accelerometer/index.html
@@ -6,11 +6,15 @@
     <script src="../../xbps.js"></script>
   </head>
 
-  <body onLoad="start();" bgcolor="#DDD">
-  <p>To interact with this demo, you require a WebGL-enabled browser on a device which has a sudden motion sensor.<br />
+  <body onLoad="start();">
+    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> Accelerometer Demo</h1>
+   
+    <p>To interact with this demo, you require a WebGL-enabled browser on a device which has a sudden motion sensor.<br />
   Otherwise you can <a href="http://www.youtube.com/watch?v=U37owvJj3Ws">view the video</a>.
-  </p> 
-    <input type="checkbox" id="invert" /> Invert X axis<br />
-    <canvas id="canvas" width="500" height="500"></canvas>
+    </p>
+    <p>
+      <input type="checkbox" id="invert" /> Invert X axis<br />
+      <canvas id="canvas" width="500" height="500"></canvas>
+    </p>
   </body>
 </html>
