--- a/demos/fixed_function/index.html
+++ b/demos/fixed_function/index.html
@@ -8,8 +8,13 @@
     <script src="demo.js"></script>
   </head>
 
-  <body onLoad="start();" bgcolor="#222222">
-    <canvas id="canvas" width="500" height="500"></canvas><span id="thumbnails"></span><br />
+  <body onLoad="start();">
+    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> Fixed Function Demo</h1>
+  
+    <p>
+      <canvas id="canvas" width="500" height="500"></canvas>
+    </p>
+    
   </body>
 
 </html>
