--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -7,11 +7,16 @@
     <script src="lion.js"></script>
   </head>
 
-  <body onLoad="start();" bgcolor="#222222">
-    <span id="fileStatus"></span><br />
-    <canvas id="canvas" width="500" height="500"></canvas><br />
-    <span>Invert scroll wheel:</span><input type="checkbox" id="invertScroll" />
-    <span id="debug"></span>
+  <body onLoad="start();">
+  
+    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> Lion Demo</h1>
+    <p><span id="fileStatus"></span></p>
+    
+    <p>
+      <canvas id="canvas" width="500" height="500"></canvas>
+    </p>
+    
+    <p><span>Invert scroll wheel:</span><input type="checkbox" id="invertScroll" /></p>
   </body>
 
 </html>
