--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -11,7 +11,7 @@
     <script src="js/many_clouds.js"></script>
   </head>
 
-  <body onload="start();" bgcolor="#222222" text="#FFFFFF">
+  <body onload="start();">
     <script type="text/javascript">
       $(function() {
         $("#progressbar1").css({'height': '10px' });
@@ -31,6 +31,9 @@
     <!-- jquery prevents me from using spans for
           elements, so I use tables instead.
     -->
+    
+        <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> Many Clouds</h1>
+  <p>
     <table>
       <tr>
         <td>
@@ -71,6 +74,7 @@
         </td>
       </tr>
     </table>
-
+  </p>
+  
   </body>
 </html>
