updated index with links

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <html>
 
   <head>
-    <script src="example.js"></script>
-    <script src="xbps.js"></script>
+    <!--<script src="example.js"></script>
+    <script src="xbps.js"></script>-->
   </head>
 
-  <body onLoad="start();">
-    <canvas id="canvas" style="border: 1px solid black;" width="400" height="400"></canvas>
+  <body>
+   <!--  <canvas id="canvas" style="border: 1px solid black;" width="400" height="400"></canvas> -->
+<h2>Demos</h2>
+
+<a href="demos/acorn/">simple acorn</a><br />
+<a href="demos/mickey/">Mickey</a><br />
+<a href="demos/all_shaders">Shaders</a><br />
+<a href="demos/fixed_function">Fixed Function</a><br />
+<a href="demos/lion">Lion</a><br />
+<a href="demos/many_clouds/">Many clouds</a><br />
+<a href="demo/museum/">Museum</a><br />
+
   </body>
   <pre>
-var ps, acorn;
+/*var ps, acorn;
 
 function start(){
   ps = new PointStream();
@@ -21,6 +31,6 @@ function start(){
     ps.render(acorn);
   };
   acorn = ps.load("clouds/acorn.asc");
-}
+}*/
 </pre>
 </html>
