--- a/index.html
+++ b/index.html
@@ -15,22 +15,9 @@
 <a href="demos/fixed_function">Fixed Function</a><br />
 <a href="demos/lion">Lion</a><br />
 <a href="demos/many_clouds/">Many clouds</a><br />
-<a href="demo/museum/">Museum</a><br />
+<a href="demos/museum/">Museum</a><br />
 
   </body>
   <pre>
-/*var ps, acorn;
-
-function start(){
-  ps = new PointStream();
-  ps.setup(document.getElementById('canvas'));
-  ps.pointSize(5);
-  ps.onRender = function(){
-    ps.translate(0, 0, -25);
-    ps.clear();
-    ps.render(acorn);
-  };
-  acorn = ps.load("clouds/acorn.asc");
-}*/
 </pre>
 </html>
